--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.511.0",
     "moment": "^2.30.1",
     "number-to-words": "^1.2.4",
     "react": "^19.1.0",
