--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-router-dom": "^7.6.1",
     "react-select": "^5.10.1",
     "react-toastify": "^11.0.5",
+    "tailwind-scrollbar-hide": "^4.0.0",
     "use-debounce": "^10.0.4",
     "uuid": "^11.1.0",
     "xlsx": "^0.18.5",
