--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "react-responsive": "^10.0.1",
     "react-router-dom": "^7.6.1",
     "react-select": "^5.10.1",
+    "react-slick": "^0.30.3",
     "react-toastify": "^11.0.5",
     "tailwind-scrollbar-hide": "^4.0.0",
+    "slick-carousel": "^1.8.1",
     "use-debounce": "^10.0.4",
     "uuid": "^11.1.0",
     "xlsx": "^0.18.5",
