--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.511.0",
     "moment": "^2.30.1",
     "number-to-words": "^1.2.4",
@@ -35,8 +36,8 @@
     "react-select": "^5.10.1",
     "react-slick": "^0.30.3",
     "react-toastify": "^11.0.5",
-    "tailwind-scrollbar-hide": "^4.0.0",
     "slick-carousel": "^1.8.1",
+    "tailwind-scrollbar-hide": "^4.0.0",
     "use-debounce": "^10.0.4",
     "uuid": "^11.1.0",
     "xlsx": "^0.18.5",
