--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "axios": "^1.9.0",
     "country-state-city": "^3.2.1",
     "date-fns": "^4.1.0",
+    "embla-carousel": "^8.6.0",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
     "formik": "^2.4.6",
     "framer-motion": "^12.15.0",
     "html2canvas": "^1.4.1",
