--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-paginate": "^8.3.0",
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.2.0",
     "react-responsive": "^10.0.1",
