--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.1.1",
     "@reduxjs/toolkit": "^2.8.2",
     "@tanstack/react-table": "^8.21.3",
     "axios": "^1.9.0",
@@ -32,7 +35,6 @@
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "react-paginate": "^8.3.0",
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.2.0",
     "react-responsive": "^10.0.1",
